--- a/ntalk/views/contatos/index.ejs
+++ b/ntalk/views/contatos/index.ejs
@@ -4,6 +4,7 @@
 </header>
 
 <section>
+  <!-- Formulário de novo contato -->
   <form action="/contato" method="post">
     <input type="text" name="contato[nome]" placeholder="Nome">
     <input type="text" name="contato[email]" placeholder="E-mail">
@@ -25,13 +26,13 @@
           <td><%- contato.email %></td>
           <td>
             <a href="/contato/<%- index %>">Detalhes</a>
-            <a href="/chat/<%- contato.email %>">Conversar</a>
+            <a href="/chat/<%- contato.email %>" id="chat_<%- contato.email %>">Conversar</a>
           </td>
-
         </tr>
       <% }) %>
     </tbody>
   </table>
 </section>
+<% include notify_script %>
 <% include ../exit %>
 <% include ../footer %>
