--- a/ntalk/views/contatos/index.ejs
+++ b/ntalk/views/contatos/index.ejs
@@ -24,6 +24,7 @@
         <tr>
           <td><%- contato.nome %></td>
           <td><%- contato.email %></td>
+          <td><span id="notify_<%- contato.email %>">Offline</span></td>
           <td>
             <a href="/contato/<%- index %>">Detalhes</a>
             <a href="/chat/<%- contato.email %>" id="chat_<%- contato.email %>">Conversar</a>
