Controllers e Views refatoradas com adição da persistência das informações utilizando MongoDB.

--- a/ntalk/views/contatos/show.ejs
+++ b/ntalk/views/contatos/show.ejs
@@ -3,7 +3,7 @@
   <h2>Ntalk - Dados do contato</h2>
 </header>
 <section>
-  <form action="/contato/<%- id %>" method="post">
+  <form action="/contato/<%- contato._id %>" method="post">
     <input type="hidden" name="_method" value="delete">
     <p>
       <label>Nome:</label><%- contato.nome %>
