--- a/ntalk/views/contatos/index.ejs
+++ b/ntalk/views/contatos/index.ejs
@@ -20,13 +20,13 @@
       </tr>
     </thead>
     <tbody>
-      <% contatos.forEach(function(contato, index) { %>
+      <% contatos.forEach(function(contato) { %>
         <tr>
           <td><%- contato.nome %></td>
           <td><%- contato.email %></td>
-          <td><span id="notify_<%- contato.email %>">Offline</span></td>
+          <td><span id="notify_<%- contato.email %>" class="label">Offline</span></td>
           <td>
-            <a href="/contato/<%- index %>">Detalhes</a>
+            <a href="/contato/<%- contato._id %>">Detalhes</a>
             <a href="/chat/<%- contato.email %>" id="chat_<%- contato.email %>">Conversar</a>
           </td>
         </tr>
