Inserção dos arquivos do Bootstrap

--- a/ntalk/views/footer.ejs
+++ b/ntalk/views/footer.ejs
@@ -1,5 +1,9 @@
     <footer>
         <small>Ntalk - Agenda de contatos</small>
     </footer>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Arquivo js do bootstrap. -->
+    <script src="/javascripts/bootstrap.min.js"></script>
   </body>
 </html>
