--- a/ntalk/views/home/index.ejs
+++ b/ntalk/views/home/index.ejs
@@ -9,15 +9,17 @@
       <h4>Bem-vindo!</h4>
     </header>
 
-    <section>
-      <form action="/entrar" method="post">
-        <input type="text" name="usuario[nome]" placeholder="Seu nome">
-        <br>
-        <input type="text" name="usuario[email]" placeholder="Seu e-mail">
-        <br>
-        <button type="submit">Entrar</button>
-      </form>
-    </section>
+    <div class="container">
+      <section>
+        <form action="/entrar" method="post">
+          <input type="text" name="usuario[nome]" placeholder="Seu nome">
+          <br>
+          <input type="text" name="usuario[email]" placeholder="Seu e-mail">
+          <br>
+          <button type="submit">Entrar</button>
+        </form>
+      </section>
+    </div>
 
     <!-- Inclui o arquivo ejs com os dados do rodapé -->
     <% include ../footer %>
