--- a/ntalk/views/header.ejs
+++ b/ntalk/views/header.ejs
@@ -3,7 +3,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ntalk - Agenda de contatos</title>
+
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
   </head>
   <body>
-    
