--- a/ntalk/views/header.ejs
+++ b/ntalk/views/header.ejs
@@ -9,5 +9,6 @@
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
