--- a/ntalk/views/home/index.ejs
+++ b/ntalk/views/home/index.ejs
@@ -4,21 +4,21 @@
           que serão reutilizados com maior frequência, evitando a repetição
           desnecessária. -->
     <% include ../header %>
-    <header>
+    <header class="page-header">
       <h1>Ntalk</h1>
       <h4>Bem-vindo!</h4>
     </header>
 
     <div class="container">
-      <section>
-        <form action="/entrar" method="post">
-          <input type="text" name="usuario[nome]" placeholder="Seu nome">
-          <br>
-          <input type="text" name="usuario[email]" placeholder="Seu e-mail">
-          <br>
-          <button type="submit">Entrar</button>
-        </form>
-      </section>
+        <section>
+          <form action="/entrar" method="post">
+            <input type="text" name="usuario[nome]" placeholder="Seu nome">
+            <br>
+            <input type="text" name="usuario[email]" placeholder="Seu e-mail">
+            <br>
+            <button type="submit">Entrar</button>
+          </form>
+        </section>
     </div>
 
     <!-- Inclui o arquivo ejs com os dados do rodapé -->
