--- a/ntalk/views/chat/index.ejs
+++ b/ntalk/views/chat/index.ejs
@@ -1,23 +1,18 @@
 <% include ../header %>
-<script src="/socket.io/socket.io.js"></script>
-<script>
-  var socket = io.connect('http://localhost:3000');
-  socket.on('send-client', function (msg) {
-    var chat = document.getElementById('chat');
-    chat.innerHTML += msg;
-  });
-  var enviar = function() {
-    var msg = document.getElementById('msg');
-    socket.emit('send-server', msg.value);
-  };
-</script>
-<header>
+<% include chat_script %>
+
+<header class="row-fluid text-center">
   <h2>Ntalk - Chat</h2>
 </header>
-<section>
-  <pre id="chat"></pre>
-  <input type="text" id="msg" placeholder="Mensagem">
-  <button type="button" onclick="enviar();">Enviar</button>
+<section class="row-fluid">
+  <div class="well span6 offset3">
+    <pre id="chat" class="pre-scrollable" style="width:auto; height:250px;"></pre>
+      <div class="input-append">
+        <input type="text" id="mensagem" class="input-xlarge" placeholder="Digite sua mensagem">
+        <button class="btn btn-success" onclick="enviar();">Enviar</button>
+      </div>
+  </div>
 </section>
+
 <% include ../exit %>
 <% include ../footer %>
